[package]
name = "ggez_game_template"
version = "0.1.0"
authors = ["Simon Heath <icefoxen@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2018"

[profile.dev]
opt-level = 2


[dependencies]
ggez = "0.5"
ggez-goodies = "0.5"
euclid = {version = "0.19", features=["mint"]}
warmy = "0.11"
log = "0.4"
fern = {version = "0.5", features = ["colored"] }
chrono = "0.4"
serde = {version = "1.0.99", features = ["derive"] }
pathfinding = "1.1.12"
ron = "0.5.1"
